--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,2 @@
-DB_HOST=dpg-d4mi3gu3jp1c739ujks0-a
-DB_USER=fnb_app_user
-DB_PASSWORD=6HAYc7CkyIxUEJ750ccuiJyLbMy6fl4K
-DB_NAME=fnb_app
-PORT=5432
+DATABASE_URL=postgresql://fnb_app_user:6HAYc7CkyIxUEJ750ccuiJyLbMy6fl4K@dpg-d4mi3gu3jp1c739ujks0-a/fnb_app
+PORT=10000
